--- a/entry-frontend/index.html
+++ b/entry-frontend/index.html
@@ -24,7 +24,7 @@
                                                                                                                                
         `, "font-family:monospace")
       var isChrome = !!window.chrome && !!window.chrome.webstore;
-      if (!isChrome || !bowser.chrome) {
+      if (!isChrome) {
         alert('EntryDSM은 크롬 환경에서만 접속 할 수 있습니다.');
         window.location.href = 'https://www.google.com/intl/ko_ALL/chrome/';
       }
